--- a/index.html
+++ b/index.html
@@ -40,9 +40,12 @@
         <a class="a-btn" href="var.pdf"><button> Right Form Of Verbes</button></a>
         
         <a class="a-btn" href="cs.pdf"><button> Completing Sentence</button></a>
+
+        <a class="a-btn" href="connectors.pdf"><button> Connectors</button></a>
         
-        </button>
+        <a class="a-btn" href="narration.pdf"><button> Narration</button></a>
       </div>
     </div>
   </body>
 </html>
+
